syntax = "proto3";

package zmake.v1.fs;

import "digest.proto";

message VirtualFsItem{
  string relative_path = 1;

  oneof item{
    zmake.v1.digest.Digest digest = 2;
    string symlink_target = 3;
    bool empty_directory = 4;
  }

  bool is_executable = 5;
  bool is_readonly = 6;
}
